# SpringerROS_Gazebo2015

./: README.md
scipio/IGVC_Simulation/: install.bash
scipio/IGVC_Simulation/gazebo_config/: gazeboekf.launch
scipio/IGVC_Simulation/scipio_simulation/: package.xml
scipio/IGVC_Simulation/scipio_simulation/launch/: gazebo.launch
surus/Software_RMC/rmc_2dnav/: CMakeLists.txt  package.xml
surus/Software_RMC/rmc_2dnav/config/: base_local_planner_params.yaml  control.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  pose_follower_params.yaml
surus/Software_RMC/rmc_2dnav/launch/: control.launch  move_base.launch  move_base2.launch
surus/Software_RMC/rmc_2dnav/maps/: rmc_arena.yaml  rmc_arena_5cm.xcf  rmc_arena_5cm.yaml
surus/Software_RMC/rmc_config/: CMakeLists.txt  package.xml
surus/Software_RMC/rmc_config/yaml/: goalpoints.yaml
surus/Software_RMC/robot_setup_tf/: CMakeLists.txt  package.xml
surus/Software_RMC/robot_setup_tf/src/broadcaster/: tf_broadcaster.cpp
surus/Software_RMC/scripts/: installEDT.bash
surus/Software_RMC/simulation/LunArena2/: LunArena2.sdf  model.config
surus/Software_RMC/simulation/aruco/: model.config  model.sdf
surus/Software_RMC/simulation/gazebo_config/: gazeboekfrmc.launch  rgbd_mapping.launch
surus/Software_RMC/simulation/surus_sim/: CMakeLists.txt  package.xml
surus/Software_RMC/state_machine/: CMakeLists.txt
surus/Software_RMC/teensy_servo/: CMakeLists.txt  README.md  package.xml
surus/Software_RMC/vision/: CMakeLists.txt  package.xml
(+58 files in other folders)
